gitops/platform-apps/jitsi/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-jitsi
  namespace: jitsi
  labels:
    app.kubernetes.io/name: auth-jitsi
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: auth-jitsi
  template:
    metadata:
      labels:
        app.kubernetes.io/name: auth-jitsi
    spec:
      containers:
        - name: auth-jitsi
          image: ghcr.io/harrywesterman/twinbox-manager-worker:jitsi-openid-sha-f67e299
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
