gitops/platform-apps/jitsi/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-jitsi
  namespace: jitsi
  labels:
    app.kubernetes.io/name: auth-jitsi
spec:
  selector:
    app.kubernetes.io/name: auth-jitsi
  ports:
    - name: http
      port: 3000
      targetPort: http
